--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,14 @@ img {
 }
 
 .container {
-  display: block; /*Для корректного отображения в IE11*/
   width: 1200px;
   padding: 0 27px;
   margin: 0 auto;
   box-sizing: border-box;
+}
+
+.IE-container {
+  display: block; /*Для корректного отображения в IE11*/
 }
 
 .main-header {
@@ -159,7 +162,7 @@ img {
 
 .catalog-navigation::before {
   content: '';
-  position: absolute;
+  position: absolute;   /*Для удобства перехода на всплывающие при наведении формы*/
   width: 110px;
   height: 5px;
   top: -5px;
@@ -278,7 +281,7 @@ img {
 
 .search-form {
   display: none;
-  padding: 15px 20px;
+  padding: 20px 15px;
   font-size: 16px;
   line-height: 18px;
   background-color: #f8f7f4;
@@ -300,10 +303,18 @@ img {
   padding-bottom: 10px;
   padding-left: 15px;
   padding-right: 15px;
+  font-size: 14px;
+  line-height: 24px;
   font-family: inherit;
+  font-weight: bold;
   border: 1px solid #d3d3d2;
   border-radius: 5px;
   background-color: #ffffff;
+}
+
+.search-field::placeholder {
+  font-weight: normal;
+  color: #999999;
 }
 
 .login-link {
@@ -337,7 +348,7 @@ img {
   position: absolute;
   top: 37px;
   right: 0;
-  padding: 21px 18px;
+  padding: 20px 18px;
   background-color: #f8f7f4;
   border-radius: 5px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
@@ -359,16 +370,22 @@ img {
   padding: 10px 15px;
   font-size: 14px;
   line-height: 24px;
+  font-weight: bold;
   font-family: inherit;
   border: 1px solid #d3d3d2;
   border-radius: 5px;
   background-color: #ffffff;
 }
 
+.login-window input::placeholder {
+  font-weight: normal;
+  color: #999999;
+}
+
 .login-password-info {
   display: inline-block;
   vertical-align: middle;
-  margin-left: 6px;       /*Отступ от кнопки занижен. Дело в том, что если не прогружается шрифт Roboto, ссылка сползают под кнопку*/
+  margin-left: 16px;
 }
 
 .login-window input:hover,
@@ -447,6 +464,7 @@ img {
   font-family: inherit;
   font-size: 13px;
   line-height: 24px;
+  font-weight: 400;
   color: #323232;
   text-decoration: underline;
 }
@@ -820,7 +838,7 @@ img {
 
  .icecream-name {
   margin-bottom: 10px;
-  margin-top: -40px;   /*наверно нужно найти другое решение*/
+  margin-top: -40px;
   padding-bottom: 0;
 }
 
@@ -879,7 +897,6 @@ img {
   margin: 0 auto;
   margin-bottom: 20px;
   z-index: 20;
-  /* transform: translateY(-50px); */
 }
 
 .advantages {
@@ -1023,8 +1040,6 @@ img {
 }
 
 .sub-button {
-  /* display: inline-block;
-  vertical-align: middle;  */
   padding-left: 19px;
   padding-right: 19px;
   padding-top: 7px;
@@ -1050,9 +1065,14 @@ img {
   font-size: 16px;
   line-height: 24px;
   font-family: inherit;
-  color: #999999;
+  font-weight: bold;
   border: 1px solid #d3d3d2;
   border-radius: 5px;
+}
+
+.subscription input::placeholder {
+  font-weight: normal;
+  color: #999999;
 }
 
 .subscription input:hover {
@@ -1276,7 +1296,7 @@ img {
   background-color: #ffffff;
 }
 
-.pagination li:active a{
+.pagination li:active a {
   color: #353535;
 }
 
@@ -1313,7 +1333,7 @@ img {
 
 .right {
   background-image: url('../img/icon-right-small.svg');
-  background-position: center;  /*Как сделать эффект наложения цвета на фоновое изображение стрелочки? Она должна быть белее*/
+  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -1834,7 +1854,7 @@ img {
   display: none;
   position: fixed;
   width: 427px;
-  top: 330px;
+  top: 220px;
   left: 50%;
   padding-top: 17px;
   padding-left: 25px;
@@ -1889,8 +1909,8 @@ img {
   font-family: inherit;
   font-size: 16px;
   line-height: 24px;
-  font-weight: 500;
-  color: #999999;
+  font-family: inherit;
+  font-weight: bold;
   background-color: #ffffff;
   border: 1px solid #d3d3d2;
   border-radius: 5px;
@@ -1898,8 +1918,15 @@ img {
 
 .feedback-comment {
   width: 100%;
-  max-width: 100%;
+  resize: none;
   margin-bottom: 25px;
+}
+
+.feedback-form input[type='text']::placeholder,
+.feedback-form input[type='email']::placeholder,
+.feedback-comment::placeholder {
+  font-weight: normal;
+  color: #999999;
 }
 
 .feedback-button {
