--- a/css/style.css
+++ b/css/style.css
@@ -1636,7 +1636,7 @@ img {
   padding: 0;
   padding-top: 7px;
   padding-bottom: 9px;
-  padding-right: 21px;
+  padding-right: 17px;
   font-weight: 500;
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 30px;
@@ -1660,7 +1660,11 @@ img {
   display: inline-block;
   position: relative;
   vertical-align: middle;
-  padding-left: 48px;
+  padding-left: 47px;
+}
+
+.checkbox-button[type='checkbox']:not(:checked) + label {
+  padding-left: 3px;
 }
 
 .checkbox-button[type='checkbox'] {
@@ -1672,12 +1676,11 @@ img {
   position: absolute;
   width: 40px;
   height: 30px;
-  bottom: -4px;
-  left: -35px;
+  top: -1px;
+  left: -32px;
   background-image: url('../img/checkbox-off.svg');
   background-repeat: no-repeat;
   opacity: 0.8;
-  background-position: 0 5px;
   transform: scale(0.88);
 }
 
@@ -1686,12 +1689,11 @@ img {
   position: absolute;
   width: 40px;
   height: 30px;
-  bottom: -4px;
-  left: -35px;
+  top: -1px;
+  left: -34px;
   background-image: url('../img/checkbox-on.svg');
   background-repeat: no-repeat;
   opacity: 0.8;
-  background-position: 0 5px;
   transform: scale(0.88);
 }
 
