--- a/css/style.css
+++ b/css/style.css
@@ -1348,17 +1348,17 @@ img {
 }
 
 .right {
+  margin-right: -1px;
+  padding: 4px;
   background-image: url('../img/icon-right-small.svg');
   background-position: center;
   background-repeat: no-repeat;
-}
-
-.right a {
-  padding: 5px 5px;
+  border-radius: 50%;
 }
 
 .left {
   margin-right: 4px;
+  padding: 4px;
   background-image: url('../img/icon-right-small.svg');
   background-position: center;
   background-repeat: no-repeat;
@@ -1799,6 +1799,7 @@ img {
 
 .pagination {
   display: flex;
+  position: relative;
   justify-content: flex-end;
   align-items: center;
   margin: 0
@@ -1808,6 +1809,7 @@ img {
 }
 
 .pagination a {
+  padding: 0 10px;
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
@@ -1816,7 +1818,9 @@ img {
 
 .pagination li {
   text-align: center;
-  padding: 4px 9px;
+  padding-top: 6px;
+  padding-bottom: 3px;
+  margin-left: -1px;
   border-radius: 50%;
 }
 
@@ -1886,6 +1890,10 @@ img {
   background-color: #f8f7f4;
   z-index: 150;
   border-radius: 10px;
+}
+
+.feedback-window-show {
+  display: block;
 }
 
 .feedback-window b {
