--- a/css/style.css
+++ b/css/style.css
@@ -1880,7 +1880,7 @@ img {
   display: none;
   position: fixed;
   width: 427px;
-  top: 220px;
+  top: 80px;
   left: 50%;
   padding-top: 17px;
   padding-left: 25px;
@@ -1993,6 +1993,10 @@ img {
   background-color: #000000;
   opacity: 0.3;
   z-index: 100;
+}
+
+.overlay-show {
+  display: block;
 }
 
 .delivery p {
