--- a/css/style.css
+++ b/css/style.css
@@ -1880,7 +1880,7 @@ img {
   display: none;
   position: fixed;
   width: 427px;
-  top: 80px;
+  top: 10%;
   left: 50%;
   padding-top: 17px;
   padding-left: 25px;
