--- a/css/style.css
+++ b/css/style.css
@@ -1370,11 +1370,6 @@ img {
   padding: 5px 5px;
 }
 
-.second-slide,
-.thrid-slide {
-  display: none;    /*не отобржаются до лучших времен*/
-}
-
 .caption-slide {
   text-align: center;
   margin-top: -493px;
@@ -1663,7 +1658,9 @@ img {
   padding-left: 47px;
 }
 
-.checkbox-button[type='checkbox']:not(:checked) + label {
+.jam,
+.syrup,
+.fruit {
   padding-left: 3px;
 }
 
@@ -1690,7 +1687,7 @@ img {
   width: 40px;
   height: 30px;
   top: -1px;
-  left: -34px;
+  left: -32px;
   background-image: url('../img/checkbox-on.svg');
   background-repeat: no-repeat;
   opacity: 0.8;
@@ -1913,7 +1910,7 @@ img {
   font-size: 0;
   border: none;
   cursor: pointer;
-  background-color: inherit;
+  background-color: #f8f7f4;
   background-image: url('../img/cross-big.svg');
 }
 
@@ -2044,4 +2041,16 @@ img {
 
 .sorting-type::-ms-expand {
   display: none;           /*Скрывает стрелочку select по умолчанию в IE*/
+}
+
+.not-show {
+  display: none;
+}
+
+.back-color-body-2 {
+  background-color: #8996a6;
+}
+
+.back-color-body-3 {
+  background-color: #9d8b84;
 }
