--- a/css/style.css
+++ b/css/style.css
@@ -1806,7 +1806,7 @@ img {
   position: relative;
   justify-content: flex-end;
   align-items: center;
-  margin: 0
+  margin: 0;
   padding: 0;
   margin-top: 42px;
   margin-bottom: 30px;
@@ -2018,13 +2018,12 @@ img {
   font-size: 18px;
   line-height: 24px;
   font-weight: bold;
-  }
+}
 
 .login-form label,
 .subscribe-form label {
   display: none;  /*Чтобы в IE11 не выскакивал label при нажатии на форму*/
-  }
-
+}
 
 .search-field::-webkit-input-placeholder,
 .login-window input::-webkit-input-placeholder,
@@ -2072,9 +2071,6 @@ img {
   border: 0;
 }
 
-.login-form-error {
-}
-
 .input-error {
   box-shadow: 0 0 5px 2px rgba(219, 0, 0, 0.7);
 }
@@ -2082,10 +2078,6 @@ img {
 @keyframes popup-animation {
   0% {
     transform: translateX(-1200px);
-  }
-
-  70% {
-    transform: translatex(-20 x);
   }
 
   90% {
